Adjusted file:separators for compatibility with Renjin.
Changed pom to generate uber jar with Renjin packages.